# stochastic

./: .readthedocs.yml  .tool-versions  CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml
.github/workflows/: build.yml
docs/: index.rst  requirements.txt
stochastic/: _version.py
stochastic/processes/discrete/: markov_chain.py  random_walk.py
stochastic/processes/noise/: colored_noise.py
