[tool.poetry]
name = "stochastic"
version = "0.8.0"
description = "Generate realizations of stochastic processes"
authors = ["Flynn <crf204@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/crflynn/stochastic"
repository = "https://github.com/crflynn/stochastic"
documentation = "https://stochastic.readthedocs.io/en/latest/"
keywords = ["stochastic", "processes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
include = [
    { path="CHANGELOG.rst", format="sdist" },
    { path="CONTRIBUTORS.rst", format="sdist" },
    { path="LICENSE.txt", format="sdist" }
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=2.0.0"
scipy = ">=1.11.0"

[tool.poetry.group.dev.dependencies]
matplotlib = ">=3.7.0"
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
pytest-xdist = ">=3.5.0"
pytest-mock = ">=3.12.0"
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=2.0.0"
sphinx-autobuild = ">=2024.2.4"
black = ">=24.0.0"
isort = ">=5.13.0"
codecov = ">=2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
